style.css
* {
    box-sizing: border-box;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

body {
    background-color: #d7c9bc;
    margin: 0px;
    font-size: 20px;
}

img {
    max-width: 100%;
}

main {
    display: flex;
    flex-wrap: wrap;
}

header {
    width: 100vw;
    background-color: #592608;
    display: flex;
    justify-content: space-around;
    max-width: 100%;
}

header .logo {
    width: 200px;
    mix-blend-mode: difference;
}

header nav {
    width: 100%;
    max-width: 1280px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header nav ul {
    list-style: none;
    display: flex;
}

 nav ul a {
    text-decoration: none;
    padding: 2rem;
    color: white;
    transition: color 200ms ease-in-out;
    font-size: 18px;
}

 nav ul a:hover {
    color: goldenrod;
    background-color: #4a2613;
}

.hero {
    height: 75vh;
    width: 100%;
    background-image: url(images/darkbrown-tunnel.jpg);
    background-position: center;
    background-attachment: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-content {
    width: 30%;
    background-color: rgba(0,0,0,0.5);
    color: white;
    text-align: center;
}

.one {
    background-image: radial-gradient(bisque, tan);
    margin-left: 15px;
}

.two {
    margin-left: 15px;
}

.three {
    margin-left: 15px;
    margin-right: 15px;
}

.one,
.two {
    width: 48.8%;
    margin-top: 15px;
    margin-bottom: 15px;
}

.four,
.five {
    width: 48.8%;
    margin-top: 15px;
    margin-bottom: 15px;
}

.five {
    background-image: radial-gradient(bisque, tan); 
    margin-left: 15px;
}

.four {
    margin-left: 15px;
}

.one :first-child {
    text-align: center;
}

.one :last-child {
    margin-left: 10px ;
    margin-right: 10px;
}

.five :first-child {
    text-align: center;
}

.five :last-child {
    margin-left: 10px;
    margin-right: 10px;
}

footer {
    background-image: conic-gradient(#26150b, #592608);
    background-image: conic-gradient( right, #26150b 75%, #a65208);
    }
    
@media screen and (max-width: 640px) {
     .one {
        width: 100%;
        margin-right: 15px;     
     }

     .two {
        width: 100%;
        margin-right: 15px;
        margin-top: 15px;
     }

     .four {
        width: 100%;
        margin-right: 15px; 
     }

     .five {
        width: 100%;
        margin-right: 15px; 
     }
}

/* start of about page */

.a-one,
.a-two {
    width: 48.8%;
    margin-top: 15px;
}

.a-one p {
    margin-left: 10px;
    margin-right: 10px;
}

.a-one h3 {
    margin-left: 10px;
}

.a-one {
    margin-left: 15px;
    background-image: radial-gradient(bisque, tan);
}

.a-two {
    margin-left: 15px;
}

.brown-disk {
    margin-top: 15px;
    margin-left: 15px;
    margin-right: 15px;
}

.a-three {
    margin-left: 15px;
}

.a-three,
.a-four,
.a-five {
    width: 32.3%;
    margin-top: 15px;
    margin-bottom: 15px;
}

.a-four {
    margin-left: 15px;
    margin-right: 15px ;
    margin-top: 30px;
}



.a-six,
.a-seven,
.a-eight {
    width: 32.3%;
    margin-top: 15px;
    margin-bottom: 15px;
}

.a-six {
    margin-left: 15px;
}

.a-seven {
    margin-left: 15px;
    margin-right: 15px ;
    background-image: radial-gradient(bisque, tan);
}

.a-six {
    background-image: radial-gradient(bisque, tan);
}

.a-eight {
    background-image: radial-gradient(bisque, tan);
}

.a-six :first-child {
    margin-left: 10px;
    margin-right: 10px;
}

.a-seven :first-child {
    margin-left: 10px;
    margin-right: 10px;
}

.a-eight :first-child {
    margin-left: 10px;
    margin-right: 10px;
}

@media screen and (max-width: 640px) {
   .brown-disk {
    margin-left: 20px;
    margin-right: 4px;
    margin-top: 10px;
   }

   .a-three,
   .a-four {
    width: 44%;
   }

   .a-three {
    margin-left: 18px;
   }

   .a-four {
    margin-top: 15px;
   }

   .a-five {
    width: 50%;
    margin-top: 0px;
    margin-bottom: 0px;
   }

   .a-six,
   .a-seven {
    width: 44%;
   }

   .a-six {
    margin-left: 18px;
   }

}

/* start of about page */

.a-one,
.a-two {
    width: 48.8%;
    margin-top: 15px;
}

.a-one {
    margin-left: 15px;
    background-image: radial-gradient(bisque, tan);
}

.a-two {
    margin-left: 15px;
}

.brown-disk {
    margin-top: 15px;
    margin-left: 15px;
    margin-right: 15px;
}


.a-three,
.a-four,
.a-five {
    width: 32.3%;
    margin-top: 15px;
    margin-bottom: 15px;
}

.a-four {
    margin-left: 15px;
    margin-right: 15px ;
    margin-top: 30px;
}



.a-six,
.a-seven,
.a-eight {
    width: 32.3%;
    margin-top: 15px;
    margin-bottom: 15px;
}

.a-seven {
    margin-left: 15px;
    margin-right: 15px ;
    background-image: radial-gradient(bisque, tan);
}

.a-six {
    background-image: radial-gradient(bisque, tan);
}

.a-eight {
    background-image: radial-gradient(bisque, tan);
}

.a-six :first-child {
    margin-left: 10px;
    margin-right: 10px;
}

.a-seven :first-child {
    margin-left: 10px;
    margin-right: 10px;
}

.a-eight :first-child {
    margin-left: 10px;
    margin-right: 10px;
}

@media screen and (max-width: 640px) {
   .brown-disk {
    margin-left: 20px;
    margin-right: 4px;
    margin-top: 10px;
   }

   .a-three,
   .a-four {
    width: 44%;
   }

   .a-three {
    margin-left: 18px;
   }

   .a-four {
    margin-top: 15px;
   }

   .a-five {
    width: 50%;
    margin-top: 0px;
    margin-bottom: 0px;
   }

   .a-six,
   .a-seven {
    width: 44%;
   }

   .a-six {
    margin-left: 18px;
   }

   .footer-header  {
    width: 50%;
   }

   .copyright {
    width: 50%;
   }
}

/* start of experience page */

.picture {
    max-width: 1280px;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
}

.button,
.exit,
.dancing {
    padding: 0 10px;
    width: 33.3%;
    padding: 0 10px;
    margin-top: 15px;
}

.hallway,
.hexagon,
.meeting {
    margin-top: 16px;
    padding: 0 10px;
    width: 33.3%;
}

.technology,
.feedback {
    padding: 0 15px;
    width: 48.7%;
}

.technology {
    background-image: radial-gradient(bisque, tan);
    margin-left: 15px;
    margin-top: 15px;
    max-width: 50%;
    margin-bottom: 15px;
}

.feedback {
    background-image: radial-gradient(bisque, tan);
    margin-left: 20px;
    margin-top: 15px;
    margin-bottom: 15px;   
}

.texhnology :first-child {
    text-align: center;
}

.text :first-child {
    text-align: center;
}

footer {
    background-image: conic-gradient(#26150b, #592608);
    background-image: conic-gradient( right, #26150b 75%, #a65208);
    display: flex;
    width: 100%;
}

footer .logo {
    width: 200px;
    mix-blend-mode: difference;
}

footer nav {
    width: 100%;
    max-width: 1280px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

footer nav ul {
    list-style: none;
    display: flex;
}

footer nav ul a {
    text-decoration: none;
    padding: 2rem;
    color: white;
    transition: color 200ms ease-in-out;
    font-size: 21px;
}

footer nav ul a:hover {
    color: goldenrod;
    background-color: #4a2613;
}

.footer-content {
    color: aliceblue;
    margin-left: 15px;
}

.copyright,
.CART {
    display: flex;
    width: 50%;
}

.CART {
   width: 20%;
}

@media screen and (max-width: 640px) {
    .button,
    .exit {
        width: 50%;
    }

    .dancing,
    .hallway {
        margin-top: 15px;
        width: 50%;
    }

    .hexagon,
    .meeting {
        width: 50%;
    }

   .technology,
   .feedback {
    width: 45%;
    margin-left: auto;
    margin-right: auto;
    display: block;
    
   }
}

/* start of visit page */

.explore {
    background-image: radial-gradient(bisque, tan);
    margin-left: 15px;
    margin-top: 15px;
    margin-bottom: 15px; 
    height: 12rem; 
}

.explore :first-child {
    text-align: center;
}

.explore :last-child {
    margin-left: 5px;
    margin-top: 20px ;
}

.tunnel {
    margin-left: 50px;
    margin-top: 15px;
    margin-bottom: 15px;     
}

.explore,
.tunnel {
    width: 48%;
}

.map {
   margin-left: 15px; 
}

.map,
.form {
    width: 30%;
}

.form {
    margin-left: 650px;
    margin-top: -100px;
}

@media screen and (max-width: 640px) {
   .tunnel {
    margin: 0;
    margin-top: 15px;
    margin-left: 25px;
    margin-right: 25px;
   }

   .map,
   .form {
    width: 50%;
   }
}

/* start of amenities page */


.affordability {
    background-image: radial-gradient(bisque, tan);
    margin-left: 15px;
    margin-top: 15px;
    margin-right: 15px;
}


.shadow,
.surface-image,
.food,
.staircase {
   width: 24%;
   margin: 0%;
   margin-top: 15px;
} 

.shadow {
    margin-left: 15px;
}

.surface-image {
    margin-left: 15px;
}

.food {
    margin-left: 15px;
}

.staircase {
    margin-left: 15px;
}

.surface {
    margin-left: 15px;
}

.assistive {
    margin-left: 15px;
}

.airship {
    margin-left: 15px;
}

.assistive,
.surface,
.airship {
    width: 32.3%;   
    margin-top: 15px;
    margin-bottom: 15px;
}

.assistive :first-child {
    text-align: center;
}

.surface :first-child {
    text-align: center;
}

.airship :first-child {
    text-align: center;
}

.assistive :last-child {
    margin-left: 10px;
    margin-right: 5px;
}

.surface :last-child {
    margin-left: 10px;
    margin-right: 5px;
}

.airship :last-child {
    margin-left: 10px;
    margin-right: 5px;
}

.affordability :last-child {
    margin-left: 10px;
    margin-right: 5px;
}

.affordability :first-child {
    margin-left: 10px;
    margin-right: 5px;
}


.assistive {
    background-image: radial-gradient(bisque, tan);  
   
}

.surface {
    background-image: radial-gradient(bisque, tan);
}

.airship {
    background-image: radial-gradient(bisque, tan);
}

@media screen and (max-width: 640px) {
    .affordability {
        margin-right: 15px;
    }

    .assistive,
    .surface {
        width: 47%;
    }

    .airship {
        width: 50%;
        display: block;
        margin-left: auto;
        margin-right: auto;
        margin-top: 10px;
    }

    .footer-content {
        width: 50%;
    }

    footer nav ul {
        width: 50%;
    }
}

